// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginForm 1`] = `
<form
  className="login-form-container"
  onSubmit={[Function]}
>
  <div
    className="login-form-header"
  >
    <p>
      Login
    </p>
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Name
    </label>
    <input
      aria-label="name-input"
      className="login-form-input"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Email
    </label>
    <input
      aria-label="email-input"
      className="login-form-input"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
  <div
    className="login-form-footer"
  >
    <button
      aria-label="submit-button"
      className="login-form-button"
      type="submit"
    >
      Go
    </button>
  </div>
</form>
`;

exports[`renders LoginForm error 1`] = `
<form
  className="login-form-container"
  onSubmit={[Function]}
>
  <div
    className="login-form-header"
  >
    <p>
      Login
    </p>
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Name
    </label>
    <input
      aria-label="name-input"
      className="login-form-input"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Email
    </label>
    <input
      aria-label="email-input"
      className="login-form-input"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
  <div>
    <p
      className="login-form-error-message"
    >
      Error: 
      Error
    </p>
  </div>
  <div
    className="login-form-footer"
  >
    <button
      aria-label="submit-button"
      className="login-form-button"
      type="submit"
    >
      Go
    </button>
  </div>
</form>
`;

exports[`renders LoginForm isLoading 1`] = `
<form
  className="login-form-container"
  onSubmit={[Function]}
>
  <div
    className="login-form-header"
  >
    <p>
      Login
    </p>
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Name
    </label>
    <input
      aria-label="name-input"
      className="login-form-input"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <label
      className="login-form-label"
      htmlFor="name"
    >
      Email
    </label>
    <input
      aria-label="email-input"
      className="login-form-input"
      onChange={[Function]}
      type="email"
      value=""
    />
  </div>
  <div
    className="login-form-footer"
  >
    <button
      aria-label="submit-button"
      className="login-form-button"
      disabled={true}
      type="submit"
    >
      Go
    </button>
  </div>
</form>
`;
